[project]
name = "MBot.py"
version = "4"
authors = [{ name = "Mmesek" }]
description = "Discord Bot written with MFramework"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Mmesek/MBot.py"
"Bug Tracker" = "https://github.com/Mmesek/MBot.py/issues"
"Source Code" = "https://github.com/Mmesek/MBot.py"

[project.license]
file = "LICENSE"


[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-report ndiff"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = ["bot", "tests"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-mock"]
lint = ["ruff"]
dev = ["[tests,lint]", "pre-commit"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 120
src = ["bot"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "E401", # Multiple imports on one line
    "F403", # Wildcard import
    "F405", # Possibly undefined symbol or imported from wildcard
]
isort.combine-as-imports = true
pydocstyle.convention = "numpy"
